# I-KNOW-WHAT-I-SAW---C-VERSION-

./: .gitignore  Makefile  README.md  iknowwhatisaw.sav  improvements path.txt
.claude/: settings.local.json
.github/workflows/: pages.yml
platform/android/: touch.c  touch.h
platform/android/app/: build.gradle
platform/android/app/jni/src/: Android.mk
platform/android/app/src/main/: AndroidManifest.xml
platform/android/app/src/main/java/com/weeks/iknowwhatisaw/: GameActivity.java
platform/android/app/src/main/res/values/: strings.xml
platform/desktop/: main_sdl.c  win_icon.rc
platform/esp32/: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32c3
platform/esp32/main/: CMakeLists.txt  esp32_main.c  idf_component.yml
platform/terminal/: main_term.c
platform/web/: shell.html
src/game/: assets.c  assets.h  audio.c  audio.h  battle.c  config.h  cutscene.c  game.c  game.h  game_internal.h  gfx.c  gfx.h  intro.c  overworld.c
src/game/assets/: font.h  font_small.h  maps.h  sprites.h  tiles.h
tools/: install-android-sdk.sh  make_capsules.py  make_icon.py
tools/steam/: README.md  app_build.vdf.tmpl  depot_content.vdf.tmpl  steam.conf  upload.sh
